# simd-playground

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: simdvec-attribute.h  simdvec.h
src/: benchmark-attribute.cpp  benchmark.cpp  simdvec-attribute.c  simdvec.c
tests/: CMakeLists.txt  test_add.cpp  test_cosine_similarity.cpp  test_dot_product.cpp  test_fixture.hpp  test_l1.cpp  test_l2.cpp  test_sub.cpp
